--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </div>
       </div>
       <div class="container">
-        <p class="social-proof__caption">Built by Buildingit LLC. Explore <a href="/features/outreach.html">outreach tools</a>, <a href="/features/giving.html">giving workflows</a>, and visit our <a href="/blog/">blog</a> for more ministry ideas.</p>
+        <p class="social-proof__caption">Built by Buildingit LLC. Explore <a href="/features/outreach-maps.html">outreach tools</a>, <a href="/features/giving.html">giving workflows</a>, and visit our <a href="/blog/">blog</a> for more ministry ideas.</p>
       </div>
     </section>
 
@@ -178,7 +178,7 @@
               <li>Assign ride-along visits or coffee meetups.</li>
               <li>Automate welcome journeys with texts and emails.</li>
             </ul>
-            <a class="btn btn--ghost" href="/features/outreach.html">See Features</a>
+            <a class="btn btn--ghost" href="/features/outreach-maps.html">See Features</a>
           </article>
           <article class="card reveal">
             <h3>Follow-up Automation</h3>
