--- a/church-app.html
+++ b/church-app.html
@@ -113,7 +113,7 @@
           </ul>
           <div class="stack-md">
             <a class="btn btn--primary" href="#get-started">Get Started Free</a>
-            <a class="btn btn--ghost" href="/features/outreach.html">Explore Outreach Maps</a>
+            <a class="btn btn--ghost" href="/features/outreach-maps.html">Explore Outreach Maps</a>
           </div>
         </div>
         <div class="feature-media reveal" aria-hidden="true">
