--- a/index.html
+++ b/index.html
@@ -291,17 +291,17 @@
           <article class="card reveal">
             <h3>Guest follow-up that lasts beyond Sunday</h3>
             <p class="text-muted">See the outreach map playbook that keeps small groups connected with first-time guests.</p>
-            <a class="btn btn--ghost" href="/blog/outreach-map-playbook/">Read on the blog</a>
+            <a class="btn btn--ghost" href="/blog/outreach-map-playbook.html">Read on the blog</a>
           </article>
           <article class="card reveal">
             <h3>Practical rhythms for leading a prayer team</h3>
             <p class="text-muted">Download the prayer feed cadence pastors use to respond quickly and share testimonies.</p>
-            <a class="btn btn--ghost" href="/blog/prayer-team-rhythms/">Read on the blog</a>
+            <a class="btn btn--ghost" href="/blog/prayer-team-rhythms.html">Read on the blog</a>
           </article>
           <article class="card reveal">
             <h3>Designing a generosity moment every week</h3>
             <p class="text-muted">Learn how SWAPP analytics help pastors celebrate giving impact with clarity.</p>
-            <a class="btn btn--ghost" href="/blog/generosity-moment-design/">Read on the blog</a>
+            <a class="btn btn--ghost" href="/blog/generosity-moment-design.html">Read on the blog</a>
           </article>
         </div>
       </div>
