Update feature CTAs to new get-started anchor

--- a/features/events.html
+++ b/features/events.html
@@ -200,7 +200,7 @@
           From registrations to volunteer rosters, SWAPP keeps every event organized and on-brand so your team can focus on the ministry moments that matter most.
         </p>
         <div class="hero-actions">
-          <a class="cta-button" href="/church-app.html#start-trial">Schedule Your Next Event</a>
+          <a class="cta-button" href="/church-app.html#get-started">Schedule Your Next Event</a>
           <a class="btn btn--ghost" href="/features/ministries-groups.html">Coordinate with ministries</a>
         </div>
       </div>
@@ -310,7 +310,7 @@
       <p class="cta-band__text">
         Empower your staff and volunteers with tools that simplify planning, spotlight stories, and follow up on every guest.
       </p>
-      <a class="cta-button" href="/church-app.html#start-trial">Schedule Your Next Event</a>
+      <a class="cta-button" href="/church-app.html#get-started">Schedule Your Next Event</a>
     </div>
   </aside>
 </body>
