--- a/features/follow-up.html
+++ b/features/follow-up.html
@@ -197,7 +197,7 @@
           <li><a class="site-nav__link" href="../index.html#blog">Blog</a></li>
         </ul>
         <div class="site-nav__cta">
-          <a class="btn btn--primary" href="../church-app.html#start-trial">Get Started Free</a>
+          <a class="btn btn--primary" href="../church-app.html#get-started">Get Started Free</a>
         </div>
       </nav>
     </div>
@@ -211,7 +211,7 @@
       <li><a class="mobile-nav__link" href="../index.html#blog">Blog</a></li>
     </ul>
     <div class="mobile-nav__cta">
-      <a class="btn btn--primary" href="../church-app.html#start-trial">Get Started Free</a>
+      <a class="btn btn--primary" href="../church-app.html#get-started">Get Started Free</a>
     </div>
   </nav>
   <main id="main-content">
@@ -339,7 +339,7 @@
           Send assignments to every volunteer in minutes, monitor progress on any device, and celebrate the ministry impact that comes from consistent care.
         </p>
         <div class="cta-band__actions">
-          <a class="btn btn--primary" href="../church-app.html#start-trial">Invite Your Team Now</a>
+          <a class="btn btn--primary" href="../church-app.html#get-started">Invite Your Team Now</a>
           <a class="btn btn--ghost" href="mailto:hello@swapp.church?subject=Follow-Up%20Demo">Talk with a Follow-Up Strategist</a>
         </div>
       </div>
