--- a/features/giving.html
+++ b/features/giving.html
@@ -236,7 +236,7 @@
           your finance and pastoral teams stay aligned on stewardship goals.
         </p>
         <div class="hero-actions">
-          <a class="cta-button" href="/church-app.html#start-trial">Enable Digital Giving</a>
+          <a class="cta-button" href="/church-app.html#get-started">Enable Digital Giving</a>
           <a class="btn btn--ghost" href="/features/index.html">Explore all features</a>
         </div>
       </div>
@@ -362,7 +362,7 @@
             ></iframe>
           </div>
           <div class="video-card__actions">
-            <a class="cta-button" href="/church-app.html#start-trial">Enable Digital Giving</a>
+            <a class="cta-button" href="/church-app.html#get-started">Enable Digital Giving</a>
             <a class="btn btn--ghost" href="/demo#giving">Watch the full demo</a>
           </div>
         </div>
@@ -376,7 +376,7 @@
       <p class="cta-band__text">
         Move every donor into a trusted, centralized experience and empower leaders to steward resources with clarity.
       </p>
-      <a class="cta-button" href="/church-app.html#start-trial">Enable Digital Giving</a>
+      <a class="cta-button" href="/church-app.html#get-started">Enable Digital Giving</a>
     </div>
   </aside>
 </body>
