--- a/features/index.html
+++ b/features/index.html
@@ -230,7 +230,7 @@
           <li><a class="site-nav__link" href="/church-app.html#blog">Blog</a></li>
         </ul>
         <div class="site-nav__cta">
-          <a class="btn btn--primary" href="/church-app.html#start-trial">Start Free Trial</a>
+          <a class="btn btn--primary" href="/church-app.html#get-started">Start Free Trial</a>
         </div>
       </nav>
     </div>
@@ -244,7 +244,7 @@
       <li><a class="mobile-nav__link" href="/church-app.html#blog">Blog</a></li>
     </ul>
     <div class="mobile-nav__cta">
-      <a class="btn btn--primary" href="/church-app.html#start-trial">Start Free Trial</a>
+      <a class="btn btn--primary" href="/church-app.html#get-started">Start Free Trial</a>
     </div>
   </nav>
   <main id="main-content">
@@ -361,7 +361,7 @@
             </ul>
             <div class="feature-row__actions">
               <a class="btn btn--primary" href="/features/outreach-maps.html">Explore Outreach Maps</a>
-              <a class="btn btn--ghost" href="/church-app.html#start-trial">Schedule a demo</a>
+              <a class="btn btn--ghost" href="/church-app.html#get-started">Schedule a demo</a>
             </div>
           </div>
         </article>
@@ -381,7 +381,7 @@
             </ul>
             <div class="feature-row__actions">
               <a class="btn btn--primary" href="/features/follow-up.html">See Follow-Up Workflows</a>
-              <a class="btn btn--ghost" href="/church-app.html#start-trial">Talk with our team</a>
+              <a class="btn btn--ghost" href="/church-app.html#get-started">Talk with our team</a>
             </div>
           </div>
         </article>
@@ -401,7 +401,7 @@
             </ul>
             <div class="feature-row__actions">
               <a class="btn btn--primary" href="/features/ministries-and-groups.html">Manage Ministries</a>
-              <a class="btn btn--ghost" href="/church-app.html#start-trial">Request onboarding help</a>
+              <a class="btn btn--ghost" href="/church-app.html#get-started">Request onboarding help</a>
             </div>
           </div>
         </article>
@@ -421,7 +421,7 @@
             </ul>
             <div class="feature-row__actions">
               <a class="btn btn--primary" href="/features/prayer.html">Learn About Prayer Tools</a>
-              <a class="btn btn--ghost" href="/church-app.html#start-trial">Start a prayer pilot</a>
+              <a class="btn btn--ghost" href="/church-app.html#get-started">Start a prayer pilot</a>
             </div>
           </div>
         </article>
@@ -441,7 +441,7 @@
             </ul>
             <div class="feature-row__actions">
               <a class="btn btn--primary" href="/features/events.html">Plan Events</a>
-              <a class="btn btn--ghost" href="/church-app.html#start-trial">See an event template</a>
+              <a class="btn btn--ghost" href="/church-app.html#get-started">See an event template</a>
             </div>
           </div>
         </article>
@@ -461,7 +461,7 @@
             </ul>
             <div class="feature-row__actions">
               <a class="btn btn--primary" href="/features/giving.html">View Giving Features</a>
-              <a class="btn btn--ghost" href="/church-app.html#start-trial">Talk with generosity coach</a>
+              <a class="btn btn--ghost" href="/church-app.html#get-started">Talk with generosity coach</a>
             </div>
           </div>
         </article>
@@ -481,7 +481,7 @@
             </ul>
             <div class="feature-row__actions">
               <a class="btn btn--primary" href="/features/admin-dashboard.html">Tour the Dashboard</a>
-              <a class="btn btn--ghost" href="/church-app.html#start-trial">Request analytics review</a>
+              <a class="btn btn--ghost" href="/church-app.html#get-started">Request analytics review</a>
             </div>
           </div>
         </article>
@@ -493,7 +493,7 @@
         <h2 class="cta-band__title">Ready to see SWAPP power your ministry?</h2>
         <p class="cta-band__text">Join churches who launched with our onboarding team and keep serving their communities with confidence. Register today to get full platform access for 30 days.</p>
         <div class="stack-md" style="gap: 1rem;">
-          <a class="btn btn--primary" href="/church-app.html#start-trial">Start Your Free Trial</a>
+          <a class="btn btn--primary" href="/church-app.html#get-started">Start Your Free Trial</a>
           <span>Prefer a guided tour? <a style="color: inherit; text-decoration: underline;" href="mailto:hello@swapp.church">Email our team</a>.</span>
         </div>
       </div>
