--- a/features/ministries-groups.html
+++ b/features/ministries-groups.html
@@ -211,7 +211,7 @@
           <li><a class="site-nav__link" href="../index.html#blog">Blog</a></li>
         </ul>
         <div class="site-nav__cta">
-          <a class="btn btn--primary" href="../church-app.html#start-trial">Get Started Free</a>
+          <a class="btn btn--primary" href="../church-app.html#get-started">Get Started Free</a>
         </div>
       </nav>
     </div>
@@ -225,7 +225,7 @@
       <li><a class="mobile-nav__link" href="../index.html#blog">Blog</a></li>
     </ul>
     <div class="mobile-nav__cta">
-      <a class="btn btn--primary" href="../church-app.html#start-trial">Get Started Free</a>
+      <a class="btn btn--primary" href="../church-app.html#get-started">Get Started Free</a>
     </div>
   </nav>
   <main id="main-content">
@@ -377,7 +377,7 @@
           Unite groups, prayer, and events in one platform that equips leaders, empowers members, and amplifies discipleship outcomes.
         </p>
         <div class="cta-band__actions">
-          <a class="btn btn--primary" href="../church-app.html#start-trial">Launch Your Ministries</a>
+          <a class="btn btn--primary" href="../church-app.html#get-started">Launch Your Ministries</a>
           <a class="btn btn--ghost" href="mailto:hello@swapp.church?subject=Ministries%20%26%20Groups%20Demo">Talk with a Ministry Strategist</a>
         </div>
       </div>
