--- a/features/outreach-maps.html
+++ b/features/outreach-maps.html
@@ -197,7 +197,7 @@
           <li><a class="site-nav__link" href="../index.html#blog">Blog</a></li>
         </ul>
         <div class="site-nav__cta">
-          <a class="btn btn--primary" href="../church-app.html#start-trial">Get Started Free</a>
+          <a class="btn btn--primary" href="../church-app.html#get-started">Get Started Free</a>
         </div>
       </nav>
     </div>
@@ -211,7 +211,7 @@
       <li><a class="mobile-nav__link" href="../index.html#blog">Blog</a></li>
     </ul>
     <div class="mobile-nav__cta">
-      <a class="btn btn--primary" href="../church-app.html#start-trial">Get Started Free</a>
+      <a class="btn btn--primary" href="../church-app.html#get-started">Get Started Free</a>
     </div>
   </nav>
   <main id="main-content">
@@ -224,7 +224,7 @@
             Give outreach directors a live command center for digital territories, volunteer check-in/out, and progress tracking so every visit counts.
           </p>
           <div class="stack-md">
-            <a class="btn btn--primary" href="../church-app.html#start-trial">Set Up Your First Map</a>
+            <a class="btn btn--primary" href="../church-app.html#get-started">Set Up Your First Map</a>
             <p class="microcopy">Guided launch included • Works with existing people records</p>
             <p class="text-muted">
               Want strategy tips? Read the <a href="../blog/outreach-map-playbook.html">Outreach Map Playbook</a> on our blog.
@@ -308,7 +308,7 @@
           Schedule a strategy call and our onboarding specialists will help you import addresses, build digital territories, and coach volunteers through their first check-in using SWAPP.
         </p>
         <div class="cta-band__actions">
-          <a class="btn btn--primary" href="../church-app.html#start-trial">Set Up Your First Map</a>
+          <a class="btn btn--primary" href="../church-app.html#get-started">Set Up Your First Map</a>
           <a class="btn btn--ghost" href="mailto:hello@swapp.church?subject=Outreach%20Maps%20Demo">Talk with an Outreach Strategist</a>
         </div>
       </div>
