Align nav links with home page anchors

--- a/features/index.html
+++ b/features/index.html
@@ -225,9 +225,9 @@
         <ul class="site-nav__list">
           <li><a class="site-nav__link" href="/">Home</a></li>
           <li><a class="site-nav__link" href="/features/" aria-current="page">Features</a></li>
-          <li><a class="site-nav__link" href="/church-app.html#how-it-works">How It Works</a></li>
-          <li><a class="site-nav__link" href="/church-app.html#admin-dashboard">Admin</a></li>
-          <li><a class="site-nav__link" href="/church-app.html#blog">Blog</a></li>
+          <li><a class="site-nav__link" href="/index.html#how-it-works">How It Works</a></li>
+          <li><a class="site-nav__link" href="/index.html#admin-dashboard">Admin</a></li>
+          <li><a class="site-nav__link" href="/index.html#blog">Blog</a></li>
         </ul>
         <div class="site-nav__cta">
           <a class="btn btn--primary" href="/church-app.html#get-started">Start Free Trial</a>
@@ -239,9 +239,9 @@
     <ul class="mobile-nav__list">
       <li><a class="mobile-nav__link" href="/">Home</a></li>
       <li><a class="mobile-nav__link" href="/features/" aria-current="page">Features</a></li>
-      <li><a class="mobile-nav__link" href="/church-app.html#how-it-works">How It Works</a></li>
-      <li><a class="mobile-nav__link" href="/church-app.html#admin-dashboard">Admin</a></li>
-      <li><a class="mobile-nav__link" href="/church-app.html#blog">Blog</a></li>
+      <li><a class="mobile-nav__link" href="/index.html#how-it-works">How It Works</a></li>
+      <li><a class="mobile-nav__link" href="/index.html#admin-dashboard">Admin</a></li>
+      <li><a class="mobile-nav__link" href="/index.html#blog">Blog</a></li>
     </ul>
     <div class="mobile-nav__cta">
       <a class="btn btn--primary" href="/church-app.html#get-started">Start Free Trial</a>
